cabal-version:      3.0
name:               not-tasty
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rewbert
maintainer:         krookr@chalmers.se
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Test.Filter
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.1.0, template-haskell
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite example
    import: warnings
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends: base ^>=4.19.1.0, template-haskell, not-tasty, QuickCheck
    hs-source-dirs: example
    default-language: Haskell2010
   -- ghc-options: -DGROUP=0